Размер банера, блоки местами, неактивные маркеры карты

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body>
+<body> 
 
 	<!-- Yandex.Metrika counter -->
 	<script type="text/javascript" >
@@ -85,7 +85,7 @@
 						<h1>
 							Техосмотр в Курске <br>
 							г.Курск, ул.Комарова 16 <br>
-							ООО «ТЕХСЕРВИЗАВТО»
+							<span>ООО «ТЕХСЕРВИЗАВТО»</span>
 						</h1>
 						<a href="#price" class="btn">Записаться на ТО</a>
 					</div>
@@ -99,7 +99,7 @@
                                 <a href="#price" class="btn">Получить консультацию</a>
                             </div>
                         </div>
-                      </div> -->
+                    </div> -->
 <!--                     <div class="service-sl__item cover" style="background-image: url(img/services-sl-img.jpg)">
                         <div class="inner">
                             <img src="img/services-sl-spacer.png" alt="" class="spacer">
@@ -108,14 +108,14 @@
                                 <a href="#price" class="btn">Получить консультацию</a>
                             </div>
                         </div>
-                      </div> -->
-                    </div> 
-                    <div class="control-panel">  
-                    	<button class="my_slick-arr my_slick-arr__prev service-sl__arr__prev"></button> 
-                    	<div class="dots-baza service-sl__dots"></div>
-                    	<button class="my_slick-arr my_slick-arr__next service-sl__arr__next"></button> 
-                    </div>
-                  </section> 
+                    </div> -->
+                </div> 
+<!--                 <div class="control-panel">  
+                   <button class="my_slick-arr my_slick-arr__prev service-sl__arr__prev"></button> 
+                   <div class="dots-baza service-sl__dots"></div>
+                   <button class="my_slick-arr my_slick-arr__next service-sl__arr__next"></button> 
+               </div> -->
+           </section> 
 <!--             <section id = "about" class="service-desk-section">
                 <div class="inner">
                     <div class="service-desk__box">
@@ -148,7 +148,7 @@
                        </div>
                     </div>
                 </div>
-              </section> -->
+            </section> -->
 <!--             <section id = "price" class="price-catalog">
                 <div class="inner">
                     <h2>
@@ -2072,105 +2072,105 @@
                         </div>
                     </div>
                 </div>
-              </section> -->
-              <section id = "kontakti" class="contacts rL hid">
-              	<div id="map"></div>
-              	<div class="inner">
-              		<div class="contacts__box">
-              			<h2>Контакты</h2>
-              			<ul class="contacts__list">
-              				<li>
-              					Курск, ул.Комарова, 16 
-              					<a href="https://yandex.ru/maps/-/CCUEUWDdgA" target="_blank" class="show-to-map">Показать на карте</a>
-              				</li> 
-              				<li>
-              					Телефон:
-              					<a href="tel:+74712745111">+7(4712)745-111</a>
-              				</li>
-              			</ul>
-              		</div>
-              	</div>
-              </section>
-              <section id = "zayavka" class="request">
-              	<div class="inner">
-              		<h2>Записаться на техосмотр</h2>
-              		<span class="under-title db">
-              			Оставьте заявку и менеджер свяжется с Вами в течение 5 минут
-              		</span>
-              		<form class="request__form rL hid">
-              			<div class="row rL hid">
-              				<label class="request__form__wr">
-              					<input class="inputbox" type="text" name="name" placeholder="Имя" autocomplete="off">
-              				</label>
-              				<label class="request__form__wr">
-              					<input class="inputbox" type="tel" name="tel" placeholder="Телефон" autocomplete="off">
-              				</label>
-              				<label class="request__form__wr">
-              					<input class="inputbox" type="text" name="model" placeholder="Марка и модель авто" autocomplete="off">
-              				</label>
-              				<span class="request__form__wr">
-              					<button class="btn zayavka__btn" type="submit">Отправить</button>
-              				</span>
-              			</div>
-              		</form>
-              	</div>
-              </section>
-              <div class="subfooter"></div>
-            </main>
-          </div>
-          <footer id="footer">
-          	<div class="inner">
-          		<div class="nav-panel">
-          			<a href="#" class="logo"></a>
-          			<nav>
-          				<ul>
+            </section> -->
+            <section id = "zayavka" class="request">
+             <div class="inner">
+                <h2>Записаться на техосмотр</h2>
+                <span class="under-title db">
+                   Оставьте заявку и менеджер свяжется с Вами в течение 5 минут
+               </span>
+               <form class="request__form rL hid">
+                   <div class="row rL hid">
+                      <label class="request__form__wr">
+                         <input class="inputbox" type="text" name="name" placeholder="Имя" autocomplete="off">
+                     </label>
+                     <label class="request__form__wr">
+                         <input class="inputbox" type="tel" name="tel" placeholder="Телефон" autocomplete="off">
+                     </label>
+                     <label class="request__form__wr">
+                         <input class="inputbox" type="text" name="model" placeholder="Марка и модель авто" autocomplete="off">
+                     </label>
+                     <span class="request__form__wr">
+                         <button class="btn zayavka__btn" type="submit">Отправить</button>
+                     </span>
+                 </div>
+             </form>
+         </div>
+     </section>
+     <section id = "kontakti" class="contacts rL hid">
+         <div id="map"></div>
+         <div class="inner">
+            <div class="contacts__box">
+               <h2>Контакты</h2>
+               <ul class="contacts__list">
+                  <li>
+                     Курск, ул.Комарова, 16 
+                     <a href="https://yandex.ru/maps/-/CCUEUWDdgA" target="_blank" class="show-to-map">Показать на карте</a>
+                 </li> 
+                 <li>
+                     Телефон:
+                     <a href="tel:+74712745111">+7(4712)745-111</a>
+                 </li>
+             </ul>
+         </div>
+     </div>
+ </section>
+ <div class="subfooter"></div>
+</main>
+</div>
+<footer id="footer">
+ <div class="inner">
+    <div class="nav-panel">
+       <a href="#" class="logo"></a>
+       <nav>
+          <ul>
 
-          					<li><a href="#kontakti">Пункты ТО</a></li>
-          					<li><a href="#zayavka">Консультация</a></li>
-          					<li><a href="#kontakti">Контакты</a></li>
-          				</ul>
-          			</nav>
-          			<div class="nav-panel__contacts clearfix">
-          				<span class="phone db desktop nav-panel__contacts__item">
-          					<span class="icon phone-icon"></span>+7(4712)745-111
-          				</span>
-          				<a href="tel:+74712745111" class="phone db mobil nav-panel__contacts__item">
-          					<span class="icon phone-icon"></span>+7(4712)745-111
-          				</a>
-          				<a href="mailto:office@aprofi46.ru" class="e-mail db nav-panel__contacts__item">
-          					<span class="icon email-icon"></span>office@aprofi46.ru
-          				</a>
-          			</div>
-          			<a href="#" class="burger-btn"><span></span></a>
-          		</div>
-          	</div>
-          </footer>
+             <li><a href="#kontakti">Пункты ТО</a></li>
+             <li><a href="#zayavka">Консультация</a></li>
+             <li><a href="#kontakti">Контакты</a></li>
+         </ul>
+     </nav>
+     <div class="nav-panel__contacts clearfix">
+      <span class="phone db desktop nav-panel__contacts__item">
+         <span class="icon phone-icon"></span>+7(4712)745-111
+     </span>
+     <a href="tel:+74712745111" class="phone db mobil nav-panel__contacts__item">
+         <span class="icon phone-icon"></span>+7(4712)745-111
+     </a>
+     <a href="mailto:office@aprofi46.ru" class="e-mail db nav-panel__contacts__item">
+         <span class="icon email-icon"></span>office@aprofi46.ru
+     </a>
+ </div>
+ <a href="#" class="burger-btn"><span></span></a>
+</div>
+</div>
+</footer>
 
 
-          <script src="js/jquery-3.5.1.js"></script>
-          <script src="js/script.js"></script>
-          <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-          <script type="text/javascript">
-          	ymaps.ready(init);
+<script src="js/jquery-3.5.1.js"></script>
+<script src="js/script.js"></script>
+<script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+<script type="text/javascript">
+ ymaps.ready(init);
 
-          	function init () {
+ function init () {
 
-          		var myMap = new ymaps.Map("map", {
-          			center: [51.703154, 36.140598],
-          			zoom: 12,
+    var myMap = new ymaps.Map("map", {
+       center: [51.703154, 36.140598],
+       zoom: 12,
            			// Выключаем все управление картой
            			controls: []
 
            		}); 
 
 
-          		var myGeoObjects = [];
+    var myGeoObjects = [];
 
-          		myGeoObjects[0] = new ymaps.Placemark([51.703154, 36.140598],{
+    myGeoObjects[0] = new ymaps.Placemark([51.703154, 36.140598],{
                                 // Свойства. 
                                 hintContent: '<div class="map-hint">Авто профи, Курск, ул.Комарова, 16</div>',
                                 balloonContent: '<div class="map-hint">Авто профи, Курск, ул.Комарова, 16</div>',
-                              },{
+                            },{
                                 // Необходимо указать данный тип макета.
                                 iconLayout: 'default#image',
                                 iconImageHref: 'img/map-marker.svg',
@@ -2179,82 +2179,82 @@
                                 // Смещение левого верхнего угла иконки относительно
                                 // её «ножки» (точки привязки).
                                 iconImageOffset: [-18, -26]
-                              });
+                            });
 
-          		myGeoObjects[1] = new ymaps.Placemark([51.720771, 36.195773],{
+    myGeoObjects[1] = new ymaps.Placemark([51.720771, 36.195773],{
                                 // Свойства. 
                                 hintContent: '<div class="map-hint">Авто профи, Курск, ул.Гунатовская, 32</div>',
                                 balloonContent: '<div class="map-hint">Авто профи, Курск, ул.Гунатовская, 32</div>',
-                              },{
+                            },{
                                 // Необходимо указать данный тип макета.
                                 iconLayout: 'default#image',
-                                iconImageHref: 'img/map-marker.svg',
+                                iconImageHref: 'img/map-marker-off.svg',
                                 // Размеры метки.
                                 iconImageSize: [151, 41],
                                 // Смещение левого верхнего угла иконки относительно
                                 // её «ножки» (точки привязки).
                                 iconImageOffset: [-18, -26]
-                              });
+                            });
 
-          		myGeoObjects[2] = new ymaps.Placemark([51.715085, 36.133600],{
+    myGeoObjects[2] = new ymaps.Placemark([51.715085, 36.133600],{
                                 // Свойства. 
                                 hintContent: '<div class="map-hint">Авто профи, Курск, пр-кт В. Клыкова, 111</div>',
                                 balloonContent: '<div class="map-hint">Авто профи, Курск, пр-кт В. Клыкова, 111</div>',
-                              },{
+                            },{
                                 // Необходимо указать данный тип макета.
                                 iconLayout: 'default#image',
-                                iconImageHref: 'img/map-marker.svg',
+                                iconImageHref: 'img/map-marker-off.svg',
                                 // Размеры метки.
                                 iconImageSize: [151, 41],
                                 // Смещение левого верхнего угла иконки относительно
                                 // её «ножки» (точки привязки).
                                 iconImageOffset: [-18, -26]
-                              });
+                            });
 
-          		myGeoObjects[3] = new ymaps.Placemark([51.675220, 36.158690],{
+    myGeoObjects[3] = new ymaps.Placemark([51.675220, 36.158690],{
                                 // Свойства. 
                                 hintContent: '<div class="map-hint">Авто профи,  Курск, Краснополянский пер. 6А</div>',
                                 balloonContent: '<div class="map-hint">Авто профи,  Курск, Краснополянский пер. 6А</div>',
-                              },{
+                            },{
                                 // Необходимо указать данный тип макета.
                                 iconLayout: 'default#image',
-                                iconImageHref: 'img/map-marker.svg',
+                                iconImageHref: 'img/map-marker-off.svg',
                                 // Размеры метки.
                                 iconImageSize: [165, 40],
                                 // Смещение левого верхнего угла иконки относительно
                                 // её «ножки» (точки привязки).
                                 iconImageOffset: [-18, -26]
-                              });
+                            });
 
-          		myGeoObjects[4] = new ymaps.Placemark([51.650963, 36.140104],{
+    myGeoObjects[4] = new ymaps.Placemark([51.650963, 36.140104],{
                                 // Свойства. 
                                 hintContent: '<div class="map-hint">Авто профи,  Курск, Магистральный проезд 18</div>',
                                 balloonContent: '<div class="map-hint">Авто профи,  Курск, Магистральный проезд 18</div>',
-                              },{
+                            },{
                                 // Необходимо указать данный тип макета.
                                 iconLayout: 'default#image',
-                                iconImageHref: 'img/map-marker.svg',
+                                iconImageHref: 'img/map-marker-off.svg',
                                 // Размеры метки.
                                 iconImageSize: [165, 40],
                                 // Смещение левого верхнего угла иконки относительно
                                 // её «ножки» (точки привязки).
                                 iconImageOffset: [-18, -26]
-                              });
+                            });
 
-          		myGeoObjects[5] = new ymaps.Placemark([51.718193, 36.083160],{
+    myGeoObjects[5] = new ymaps.Placemark([51.718193, 36.083160],{
                                 // Свойства. 
                                 hintContent: '<div class="map-hint">Авто профи,  Курский район, деревня Моква 1-я, Рябиновая улица, 10</div>',
                                 balloonContent: '<div class="map-hint">Авто профи,  Курский район, деревня Моква 1-я, Рябиновая улица, 10</div>',
-                              },{
+                            },{
                                 // Необходимо указать данный тип макета.
                                 iconLayout: 'default#image',
-                                iconImageHref: 'img/map-marker.svg',
+                                iconImageHref: 'img/map-marker-off.svg',
                                 // Размеры метки.
                                 iconImageSize: [165, 40],
                                 // Смещение левого верхнего угла иконки относительно
                                 // её «ножки» (точки привязки).
                                 iconImageOffset: [-16, -42]
-                              });
+                            });
 
 // var clusterIcons=[{
 //         href:'img/map-marker.svg',
@@ -2284,7 +2284,7 @@ var clusterer = new ymaps.Clusterer({
         // clusterBalloonCycling: false,
         // Можно отключить отображение меню навигации.
         // clusterBalloonPagerVisible: false
-      });
+    });
 
 clusterer.add(myGeoObjects);
 myMap.geoObjects.add(clusterer);
