Надписи на маркерах карты. Заголовок h1

--- a/src/index.html
+++ b/src/index.html
@@ -2183,7 +2183,7 @@
 
     myGeoObjects[1] = new ymaps.Placemark([51.720771, 36.195773],{
                                 // Свойства. 
-                                hintContent: '<div class="map-hint">Авто профи, Курск, ул.Гунатовская, 32</div>',
+                                // hintContent: '<div class="map-hint">Авто профи, Курск, ул.Гунатовская, 32</div>',
                                 balloonContent: '<div class="map-hint">Авто профи, Курск, ул.Гунатовская, 32</div>',
                             },{
                                 // Необходимо указать данный тип макета.
@@ -2198,7 +2198,7 @@
 
     myGeoObjects[2] = new ymaps.Placemark([51.715085, 36.133600],{
                                 // Свойства. 
-                                hintContent: '<div class="map-hint">Авто профи, Курск, пр-кт В. Клыкова, 111</div>',
+                                // hintContent: '<div class="map-hint">Авто профи, Курск, пр-кт В. Клыкова, 111</div>',
                                 balloonContent: '<div class="map-hint">Авто профи, Курск, пр-кт В. Клыкова, 111</div>',
                             },{
                                 // Необходимо указать данный тип макета.
@@ -2213,7 +2213,7 @@
 
     myGeoObjects[3] = new ymaps.Placemark([51.675220, 36.158690],{
                                 // Свойства. 
-                                hintContent: '<div class="map-hint">Авто профи,  Курск, Краснополянский пер. 6А</div>',
+                                // hintContent: '<div class="map-hint">Авто профи,  Курск, Краснополянский пер. 6А</div>',
                                 balloonContent: '<div class="map-hint">Авто профи,  Курск, Краснополянский пер. 6А</div>',
                             },{
                                 // Необходимо указать данный тип макета.
@@ -2228,7 +2228,7 @@
 
     myGeoObjects[4] = new ymaps.Placemark([51.650963, 36.140104],{
                                 // Свойства. 
-                                hintContent: '<div class="map-hint">Авто профи,  Курск, Магистральный проезд 18</div>',
+                                // hintContent: '<div class="map-hint">Авто профи,  Курск, Магистральный проезд 18</div>',
                                 balloonContent: '<div class="map-hint">Авто профи,  Курск, Магистральный проезд 18</div>',
                             },{
                                 // Необходимо указать данный тип макета.
@@ -2243,7 +2243,7 @@
 
     myGeoObjects[5] = new ymaps.Placemark([51.718193, 36.083160],{
                                 // Свойства. 
-                                hintContent: '<div class="map-hint">Авто профи,  Курский район, деревня Моква 1-я, Рябиновая улица, 10</div>',
+                                // hintContent: '<div class="map-hint">Авто профи,  Курский район, деревня Моква 1-я, Рябиновая улица, 10</div>',
                                 balloonContent: '<div class="map-hint">Авто профи,  Курский район, деревня Моква 1-я, Рябиновая улица, 10</div>',
                             },{
                                 // Необходимо указать данный тип макета.
