--- a/src/index.html
+++ b/src/index.html
@@ -2181,7 +2181,8 @@
                                 iconImageOffset: [-18, -26]
                             });
 
-    myGeoObjects[1] = new ymaps.Placemark([51.720771, 36.195773],{
+    myGeoObjects[1] = new ymaps.Placemark([51.720771, 36.195773],
+    { 
                                 // Свойства. 
                                 // hintContent: '<div class="map-hint">Авто профи, Курск, ул.Гунатовская, 32</div>',
                                 balloonContent: '<div class="map-hint">Авто профи, Курск, ул.Гунатовская, 32</div>',
