Правки адресов на сайтах

--- a/tehservice-avto-gunatovskaya/src/index.html
+++ b/tehservice-avto-gunatovskaya/src/index.html
@@ -27,7 +27,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body> 
+<body>   
 
 	<!-- Yandex.Metrika counter -->
 	<script type="text/javascript" >
@@ -82,7 +82,7 @@
                    <div class="content-box">
                       <h1>
                          Техосмотр в Курске <br>
-                         г.Курск, ул.Комарова 16 <br>
+                         г.Курск, ул.Гунатовская, 32 <br>
                          <span>ООО «ТЕХСЕРВИЗАВТО»</span>
                      </h1>
                      <a href="#price" class="btn">Записаться на ТО</a>
@@ -122,8 +122,8 @@
      <h2>Контакты</h2>
      <ul class="contacts__list">
       <li>
-       Курск, ул.Комарова, 16 
-       <a href="https://yandex.ru/maps/-/CCUEUWDdgA" target="_blank" class="show-to-map">Показать на карте</a>
+       г.Курск, ул.Гунатовская, 32 
+       <a href="https://yandex.ru/maps/-/CCUEmAHr1C" target="_blank" class="show-to-map">Показать на карте</a>
    </li> 
    <li>
        Телефон:
@@ -186,12 +186,12 @@
 
     myGeoObjects[0] = new ymaps.Placemark([51.703154, 36.140598],{
                                 // Свойства. 
-                                hintContent: '<div class="map-hint">Авто профи, Курск, ул.Комарова, 16</div>',
+                                // hintContent: '<div class="map-hint">Авто профи, Курск, ул.Комарова, 16</div>',
                                 balloonContent: '<div class="map-hint">Авто профи, Курск, ул.Комарова, 16</div>',
                             },{
                                 // Необходимо указать данный тип макета.
                                 iconLayout: 'default#image',
-                                iconImageHref: 'img/map-marker.svg',
+                                iconImageHref: 'img/map-marker-off.svg',
                                 // Размеры метки.
                                 iconImageSize: [36, 55],
                                 // Смещение левого верхнего угла иконки относительно
@@ -201,12 +201,12 @@
 
     myGeoObjects[1] = new ymaps.Placemark([51.720771, 36.195773],{
                                 // Свойства. 
-                                // hintContent: '<div class="map-hint">Авто профи , Курск, ул.Гунатовская, 32</div>',
+                                hintContent: '<div class="map-hint">Авто профи , Курск, ул.Гунатовская, 32</div>',
                                 balloonContent: '<div class="map-hint">Авто профи, Курск, ул.Гунатовская, 32</div>',
                             },{
                                 // Необходимо указать данный тип макета.
                                 iconLayout: 'default#image',
-                                iconImageHref: 'img/map-marker-off.svg',
+                                iconImageHref: 'img/map-marker.svg',
                                 // Размеры метки.
                                 iconImageSize: [151, 41],
                                 // Смещение левого верхнего угла иконки относительно
