--- a/tehservice-avto-krasnopolyznskay/src/index.html
+++ b/tehservice-avto-krasnopolyznskay/src/index.html
@@ -24,7 +24,7 @@
 	<link rel="icon" type="img/png" sizes="16x16" href="/img/favicon/icon16.png">
 	<link rel="mask-icon" href="/img/favicon/safari-pinned-tab.svg" color="#00abaf">
 	<meta name="theme-color" content="#3a745f"> 
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style.css"> 
 </head>
 
 <body> 
@@ -82,7 +82,7 @@
                    <div class="content-box">
                       <h1>
                          Техосмотр в Курске <br>
-                         г.Курск, ул.Комарова 16 <br>
+                         г.Курск, Краснополянский пер. 6А <br>
                          <span>ООО «ТЕХСЕРВИЗАВТО»</span>
                      </h1>
                      <a href="#price" class="btn">Записаться на ТО</a>
@@ -122,8 +122,8 @@
      <h2>Контакты</h2>
      <ul class="contacts__list">
       <li>
-       Курск, ул.Комарова, 16 
-       <a href="https://yandex.ru/maps/-/CCUEUWDdgA" target="_blank" class="show-to-map">Показать на карте</a>
+       г.Курск, Краснополянский пер. 6А
+       <a href="https://yandex.ru/maps/-/CCUEmATX9A" target="_blank" class="show-to-map">Показать на карте</a>
    </li> 
    <li>
        Телефон:
@@ -186,12 +186,12 @@
 
     myGeoObjects[0] = new ymaps.Placemark([51.703154, 36.140598],{
                                 // Свойства. 
-                                hintContent: '<div class="map-hint">Авто профи, Курск, ул.Комарова, 16</div>',
+                                // hintContent: '<div class="map-hint">Авто профи, Курск, ул.Комарова, 16</div>',
                                 balloonContent: '<div class="map-hint">Авто профи, Курск, ул.Комарова, 16</div>',
                             },{
                                 // Необходимо указать данный тип макета.
                                 iconLayout: 'default#image',
-                                iconImageHref: 'img/map-marker.svg',
+                                iconImageHref: 'img/map-marker-off.svg',
                                 // Размеры метки.
                                 iconImageSize: [36, 55],
                                 // Смещение левого верхнего угла иконки относительно
@@ -231,12 +231,12 @@
 
     myGeoObjects[3] = new ymaps.Placemark([51.675220, 36.158690],{
                                 // Свойства. 
-                                // hintContent: '<div class="map-hint">Авто профи,  Курск, Краснополянский пер. 6А</div>',
+                                hintContent: '<div class="map-hint">Авто профи,  Курск, Краснополянский пер. 6А</div>',
                                 balloonContent: '<div class="map-hint">Авто профи,  Курск, Краснополянский пер. 6А</div>',
                             },{
                                 // Необходимо указать данный тип макета.
                                 iconLayout: 'default#image',
-                                iconImageHref: 'img/map-marker-off.svg',
+                                iconImageHref: 'img/map-marker.svg',
                                 // Размеры метки.
                                 iconImageSize: [165, 40],
                                 // Смещение левого верхнего угла иконки относительно
