--- a/tehservice-avto-mokva/src/index.html
+++ b/tehservice-avto-mokva/src/index.html
@@ -82,7 +82,7 @@
                    <div class="content-box">
                       <h1>
                          Техосмотр в Курске <br>
-                         г.Курск, ул.Комарова 16 <br>
+                         Курский район, деревня Моква 1-я, Рябиновая улица, 10 <br>
                          <span>ООО «ТЕХСЕРВИЗАВТО»</span>
                      </h1>
                      <a href="#price" class="btn">Записаться на ТО</a>
@@ -122,8 +122,8 @@
      <h2>Контакты</h2>
      <ul class="contacts__list">
       <li>
-       Курск, ул.Комарова, 16 
-       <a href="https://yandex.ru/maps/-/CCUEUWDdgA" target="_blank" class="show-to-map">Показать на карте</a>
+       Курский район, деревня Моква 1-я, Рябиновая улица, 10
+       <a href="https://yandex.ru/maps/-/CCUEmAhd3D" target="_blank" class="show-to-map">Показать на карте</a>
    </li> 
    <li>
        Телефон:
@@ -186,12 +186,12 @@
 
     myGeoObjects[0] = new ymaps.Placemark([51.703154, 36.140598],{
                                 // Свойства. 
-                                hintContent: '<div class="map-hint">Авто профи, Курск, ул.Комарова, 16</div>',
+                                // hintContent: '<div class="map-hint">Авто профи, Курск, ул.Комарова, 16</div>',
                                 balloonContent: '<div class="map-hint">Авто профи, Курск, ул.Комарова, 16</div>',
                             },{
                                 // Необходимо указать данный тип макета.
                                 iconLayout: 'default#image',
-                                iconImageHref: 'img/map-marker.svg',
+                                iconImageHref: 'img/map-marker-off.svg',
                                 // Размеры метки.
                                 iconImageSize: [36, 55],
                                 // Смещение левого верхнего угла иконки относительно
@@ -261,12 +261,12 @@
 
     myGeoObjects[5] = new ymaps.Placemark([51.718193, 36.083160],{
                                 // Свойства. 
-                                // hintContent: '<div class="map-hint">Авто профи,  Курский район, деревня Моква 1-я, Рябиновая улица, 10</div>',
+                                hintContent: '<div class="map-hint">Авто профи,  Курский район, деревня Моква 1-я, Рябиновая улица, 10</div>',
                                 balloonContent: '<div class="map-hint">Авто профи,  Курский район, деревня Моква 1-я, Рябиновая улица, 10</div>',
                             },{
                                 // Необходимо указать данный тип макета.
                                 iconLayout: 'default#image',
-                                iconImageHref: 'img/map-marker-off.svg',
+                                iconImageHref: 'img/map-marker.svg',
                                 // Размеры метки.
                                 iconImageSize: [165, 40],
                                 // Смещение левого верхнего угла иконки относительно
