--- a/tehservice-avto-magistralnaya/src/index.html
+++ b/tehservice-avto-magistralnaya/src/index.html
@@ -22,7 +22,7 @@
 	<link rel="icon" type="img/png" sizes="64x64" href="/img/favicon/icon64.png">
 	<link rel="icon" type="img/png" sizes="32x32" href="/img/favicon/icon32.png">
 	<link rel="icon" type="img/png" sizes="16x16" href="/img/favicon/icon16.png">
-	<link rel="mask-icon" href="/img/favicon/safari-pinned-tab.svg" color="#00abaf">
+	<link rel="mask-icon" href="/img/favicon/safari-pinned-tab.svg" color="#00abaf"> 
 	<meta name="theme-color" content="#3a745f"> 
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -82,7 +82,7 @@
                    <div class="content-box">
                       <h1>
                          Техосмотр в Курске <br>
-                         г.Курск, ул.Комарова 16 <br>
+                         г.Курск, Магистральный проезд 18 З <br>
                          <span>ООО «ТЕХСЕРВИЗАВТО»</span>
                      </h1>
                      <a href="#price" class="btn">Записаться на ТО</a>
@@ -122,8 +122,8 @@
      <h2>Контакты</h2>
      <ul class="contacts__list">
       <li>
-       Курск, ул.Комарова, 16 
-       <a href="https://yandex.ru/maps/-/CCUEUWDdgA" target="_blank" class="show-to-map">Показать на карте</a>
+       г.Курск, Магистральный проезд 18 З
+       <a href="https://yandex.ru/maps/-/CCUEmAdJGB" target="_blank" class="show-to-map">Показать на карте</a>
    </li> 
    <li>
        Телефон:
@@ -186,12 +186,12 @@
 
     myGeoObjects[0] = new ymaps.Placemark([51.703154, 36.140598],{
                                 // Свойства. 
-                                hintContent: '<div class="map-hint">Авто профи, Курск, ул.Комарова, 16</div>',
+                                // hintContent: '<div class="map-hint">Авто профи, Курск, ул.Комарова, 16</div>',
                                 balloonContent: '<div class="map-hint">Авто профи, Курск, ул.Комарова, 16</div>',
                             },{
                                 // Необходимо указать данный тип макета.
                                 iconLayout: 'default#image',
-                                iconImageHref: 'img/map-marker.svg',
+                                iconImageHref: 'img/map-marker-off.svg',
                                 // Размеры метки.
                                 iconImageSize: [36, 55],
                                 // Смещение левого верхнего угла иконки относительно
@@ -246,12 +246,12 @@
 
     myGeoObjects[4] = new ymaps.Placemark([51.650963, 36.140104],{
                                 // Свойства. 
-                                // hintContent: '<div class="map-hint">Авто профи,  Курск, Магистральный проезд 18</div>',
+                                hintContent: '<div class="map-hint">Авто профи,  Курск, Магистральный проезд 18</div>',
                                 balloonContent: '<div class="map-hint">Авто профи,  Курск, Магистральный проезд 18</div>',
                             },{
                                 // Необходимо указать данный тип макета.
                                 iconLayout: 'default#image',
-                                iconImageHref: 'img/map-marker-off.svg',
+                                iconImageHref: 'img/map-marker.svg',
                                 // Размеры метки.
                                 iconImageSize: [165, 40],
                                 // Смещение левого верхнего угла иконки относительно
