--- a/tehosmotr-klikova/src/index.html
+++ b/tehosmotr-klikova/src/index.html
@@ -6,16 +6,16 @@
 	<meta name="viewport" content="minimum-scale=1.0, target-densitydpi=device-dpi, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="HandheldFriendly" content="true">
 	<meta name="MobileOptimized" content="320">
-	<meta name="description" content="Антикорозийная обработка автомобилей в Курске, все виды работ для любых автомобилей, только лучшие материалы. Самые выгодные цены на антикор в Курске">
-	<title>ТЕХСЕРВИЗАВТО</title>
+	<meta name="description" content="Пункт технического осмотра в Курске по адресу: пр-кт Вячеслава Клыкова, д.111 - Авто-Профи">
+	<title>ООО «АвтоПрофи»</title>
 	<meta property="og:locale" content="ru_RU" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Антикорозийная обработка автомобилей в Курске - Авто-Профи" />
-	<meta property="og:description" content="Антикорозийная обработка автомобилей в Курске, все виды работ для любых автомобилей, только лучшие материалы. Самые выгодные цены на антикор в Курске" />
-	<meta property="og:site_name" content="Антикорозийная обработка автомобилей в Курске - Авто-Профи" />
+	<meta property="og:title" content="Пункт технического осмотра в Курске по адресу: пр-кт Вячеслава Клыкова, д.111 - Авто-Профи" />
+	<meta property="og:description" content="Пункт технического осмотра в Курске по адресу: пр-кт Вячеслава Клыкова, д.111 - Авто-Профи" />
+	<meta property="og:site_name" content="Пункт технического осмотра в Курске по адресу: пр-кт Вячеслава Клыкова, д.111 - Авто-Профи" />
 	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:description" content="Антикорозийная обработка автомобилей в Курске, все виды работ для любых автомобилей, только лучшие материалы. Самые выгодные цены на антикор в Курске" />
-	<meta name="twitter:title" content="Антикорозийная обработка автомобилей в Курске - Авто-Профи" />
+	<meta name="twitter:description" content="Пункт технического осмотра в Курске по адресу: пр-кт Вячеслава Клыкова, д.111 - Авто-Профи" />
+	<meta name="twitter:title" content="Пункт технического осмотра в Курске по адресу: пр-кт Вячеслава Клыкова, д.111 - Авто-Профи" />
 	<!-- <link rel="icon" href="favicon.ico" type="img/x-icon"> -->
 	<link rel="icon" type="img/png" sizes="256x256" href="/img/favicon/icon256.png">
 	<link rel="icon" type="img/png" sizes="128x128" href="/img/favicon/icon128.png">
@@ -27,23 +27,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css"> 
 </head>
 
-<body>   
-
-	<!-- Yandex.Metrika counter -->
-	<script type="text/javascript" >
-		(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-			m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-		(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-		ym(68613199, "init", {
-			clickmap:true,
-			trackLinks:true,
-			accurateTrackBounce:true,
-			webvisor:true
-		});
-	</script>
-	<noscript><div><img src="https://mc.yandex.ru/watch/68613199" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-	<!-- /Yandex.Metrika counter -->
+<body>    
 
 	<div id="wrapper">
 		<header id="header">
@@ -82,8 +66,8 @@
                    <div class="content-box">
                       <h1>
                          Техосмотр в Курске <br>
-                         г.Курск, пр-кт В. Клыкова, 111 <br>
-                         <span>ООО «ТЕХСЕРВИЗАВТО»</span>
+                         г. Курск, пр-кт Вячеслава Клыкова, д.111 <br>
+                         <span>ООО «АвтоПрофи»</span>
                      </h1>
                      <a href="#price" class="btn">Записаться на ТО</a>
                  </div>
@@ -122,7 +106,7 @@
      <h2>Контакты</h2>
      <ul class="contacts__list">
       <li>
-       г.Курск, пр-кт В. Клыкова, 111 
+       г. Курск, пр-кт Вячеслава Клыкова, д.111 
        <a href="https://yandex.ru/maps/-/CCUEmAD4PD" target="_blank" class="show-to-map">Показать на карте</a>
    </li> 
    <li>
