--- a/tehosmotr-kulakova/src/index.html
+++ b/tehosmotr-kulakova/src/index.html
@@ -6,16 +6,16 @@
 	<meta name="viewport" content="minimum-scale=1.0, target-densitydpi=device-dpi, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="HandheldFriendly" content="true">
 	<meta name="MobileOptimized" content="320">
-	<meta name="description" content="Антикорозийная обработка автомобилей в Курске, все виды работ для любых автомобилей, только лучшие материалы. Самые выгодные цены на антикор в Курске">
-	<title>ТЕХСЕРВИЗАВТО</title>
+	<meta name="description" content="Пункт технического осмотра в Курске по адресу: г. Курск, пр-кт Кулакова, д. 150 - ТЕХАВТОСЕРВИС">
+	<title>ТЕХАВТОСЕРВИС</title>
 	<meta property="og:locale" content="ru_RU" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Антикорозийная обработка автомобилей в Курске - Авто-Профи" />
-	<meta property="og:description" content="Антикорозийная обработка автомобилей в Курске, все виды работ для любых автомобилей, только лучшие материалы. Самые выгодные цены на антикор в Курске" />
-	<meta property="og:site_name" content="Антикорозийная обработка автомобилей в Курске - Авто-Профи" />
+	<meta property="og:title" content="Пункт технического осмотра в Курске по адресу: г. Курск, пр-кт Кулакова, д. 150 - ТЕХАВТОСЕРВИС" />
+	<meta property="og:description" content="Пункт технического осмотра в Курске по адресу: г. Курск, пр-кт Кулакова, д. 150 - ТЕХАВТОСЕРВИС" />
+	<meta property="og:site_name" content="Пункт технического осмотра в Курске по адресу: г. Курск, пр-кт Кулакова, д. 150 - ТЕХАВТОСЕРВИС" />
 	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:description" content="Антикорозийная обработка автомобилей в Курске, все виды работ для любых автомобилей, только лучшие материалы. Самые выгодные цены на антикор в Курске" />
-	<meta name="twitter:title" content="Антикорозийная обработка автомобилей в Курске - Авто-Профи" />
+	<meta name="twitter:description" content="Пункт технического осмотра в Курске по адресу: г. Курск, пр-кт Кулакова, д. 150 - ТЕХАВТОСЕРВИС" />
+	<meta name="twitter:title" content="Пункт технического осмотра в Курске по адресу: г. Курск, пр-кт Кулакова, д. 150 - ТЕХАВТОСЕРВИС" />
 	<!-- <link rel="icon" href="favicon.ico" type="img/x-icon"> -->
 	<link rel="icon" type="img/png" sizes="256x256" href="/img/favicon/icon256.png">
 	<link rel="icon" type="img/png" sizes="128x128" href="/img/favicon/icon128.png">
@@ -28,22 +28,6 @@
 </head>
 
 <body>     
-
-	<!-- Yandex.Metrika counter -->
-	<script type="text/javascript" >
-		(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-			m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-		(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-		ym(68613199, "init", {
-			clickmap:true,
-			trackLinks:true,
-			accurateTrackBounce:true,
-			webvisor:true
-		});
-	</script>
-	<noscript><div><img src="https://mc.yandex.ru/watch/68613199" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-	<!-- /Yandex.Metrika counter -->
 
 	<div id="wrapper">
 		<header id="header">
@@ -82,8 +66,8 @@
                    <div class="content-box">
                       <h1>
                          Техосмотр в Курске <br>
-                         г.Курск, ул.Гунатовская, 32 <br>
-                         <span>ООО «ТЕХСЕРВИЗАВТО»</span>
+                         г. Курск, пр-кт Кулакова, д. 150 <br>
+                         <span>ООО «ТЕХАВТОСЕРВИС»</span>
                      </h1>
                      <a href="#price" class="btn">Записаться на ТО</a>
                  </div>
@@ -122,8 +106,8 @@
      <h2>Контакты</h2>
      <ul class="contacts__list">
       <li>
-       г.Курск, ул.Гунатовская, 32 
-       <a href="https://yandex.ru/maps/-/CCUEmAHr1C" target="_blank" class="show-to-map">Показать на карте</a>
+       г. Курск, пр-кт Кулакова, д. 150
+       <a href="https://yandex.ru/maps/-/CCUEmPf6CB" target="_blank" class="show-to-map">Показать на карте</a>
    </li> 
    <li>
        Телефон:
@@ -186,8 +170,8 @@
 
     myGeoObjects[0] = new ymaps.Placemark([51.703154, 36.140598],{
                                 // Свойства. 
-                                // hintContent: '<div class="map-hint">Авто профи, Курск, ул.Комарова, 16</div>',
-                                balloonContent: '<div class="map-hint">Авто профи, Курск, ул.Комарова, 16</div>',
+                                // hintContent: '<div class="map-hint">ТЕХСЕРВИЗАВТО, Курск, ул.Комарова, 16</div>',
+                                balloonContent: '<div class="map-hint">ТЕХСЕРВИЗАВТО, Курск, ул.Комарова, 16</div>',
                             },{
                                 // Необходимо указать данный тип макета.
                                 iconLayout: 'default#image',
@@ -199,10 +183,10 @@
                                 iconImageOffset: [-18, -26]
                             });
 
-    myGeoObjects[1] = new ymaps.Placemark([51.720771, 36.195773],{
+    myGeoObjects[1] = new ymaps.Placemark([51.656339, 36.133870],{
                                 // Свойства. 
-                                hintContent: '<div class="map-hint">Авто профи , Курск, ул.Гунатовская, 32</div>',
-                                balloonContent: '<div class="map-hint">Авто профи, Курск, ул.Гунатовская, 32</div>',
+                                hintContent: '<div class="map-hint">ТЕХАВТОСЕРВИС , Курск, пр-кт Кулакова, д. 150</div>',
+                                balloonContent: '<div class="map-hint">ТЕХАВТОСЕРВИС, Курск, пр-кт Кулакова, д. 150</div>',
                             },{
                                 // Необходимо указать данный тип макета.
                                 iconLayout: 'default#image',
@@ -231,8 +215,8 @@
 
     myGeoObjects[3] = new ymaps.Placemark([51.675220, 36.158690],{
                                 // Свойства. 
-                                // hintContent: '<div class="map-hint">Авто профи,  Курск, Краснополянский пер. 6А</div>',
-                                balloonContent: '<div class="map-hint">Авто профи,  Курск, Краснополянский пер. 6А</div>',
+                                // hintContent: '<div class="map-hint">ИП ЗАХАРОВ СЕРГЕЙ НИКОЛАЕВИЧ,  Курск, 3-й Краснополянский переулок, д.6 а</div>',
+                                balloonContent: '<div class="map-hint">ИП ЗАХАРОВ СЕРГЕЙ НИКОЛАЕВИЧ,  Курск, 3-й Краснополянский переулок, д.6 а</div>',
                             },{
                                 // Необходимо указать данный тип макета.
                                 iconLayout: 'default#image',
@@ -246,8 +230,8 @@
 
     myGeoObjects[4] = new ymaps.Placemark([51.650963, 36.140104],{
                                 // Свойства. 
-                                // hintContent: '<div class="map-hint">Авто профи,  Курск, Магистральный проезд 18</div>',
-                                balloonContent: '<div class="map-hint">Авто профи,  Курск, Магистральный проезд 18</div>',
+                                // hintContent: '<div class="map-hint">ТЕХСЕРВИЗАВТО,  Курск, Магистральный проезд 18</div>',
+                                balloonContent: '<div class="map-hint">ТЕХСЕРВИЗАВТО,  Курск, Магистральный проезд 18</div>',
                             },{
                                 // Необходимо указать данный тип макета.
                                 iconLayout: 'default#image',
@@ -259,20 +243,20 @@
                                 iconImageOffset: [-18, -26]
                             });
 
-    myGeoObjects[5] = new ymaps.Placemark([51.718193, 36.083160],{
-                                // Свойства. 
-                                // hintContent: '<div class="map-hint">Авто профи,  Курский район, деревня Моква 1-я, Рябиновая улица, 10</div>',
-                                balloonContent: '<div class="map-hint">Авто профи,  Курский район, деревня Моква 1-я, Рябиновая улица, 10</div>',
-                            },{
-                                // Необходимо указать данный тип макета.
-                                iconLayout: 'default#image',
-                                iconImageHref: 'img/map-marker-off.svg',
-                                // Размеры метки.
-                                iconImageSize: [165, 40],
-                                // Смещение левого верхнего угла иконки относительно
-                                // её «ножки» (точки привязки).
-                                iconImageOffset: [-16, -42]
-                            });
+    // myGeoObjects[5] = new ymaps.Placemark([51.718193, 36.083160],{
+    //                             // Свойства. 
+    //                             // hintContent: '<div class="map-hint">Авто профи,  Курский район, деревня Моква 1-я, Рябиновая улица, 10</div>',
+    //                             balloonContent: '<div class="map-hint">Авто профи,  Курский район, деревня Моква 1-я, Рябиновая улица, 10</div>',
+    //                         },{
+    //                             // Необходимо указать данный тип макета.
+    //                             iconLayout: 'default#image',
+    //                             iconImageHref: 'img/map-marker-off.svg',
+    //                             // Размеры метки.
+    //                             iconImageSize: [165, 40],
+    //                             // Смещение левого верхнего угла иконки относительно
+    //                             // её «ножки» (точки привязки).
+    //                             iconImageOffset: [-16, -42]
+    //                         });
 
 // var clusterIcons=[{
 //         href:'img/map-marker.svg',
